# llm-secure-cli

./: .commit_msg.txt  .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  benchmark_results.md  deny.toml  justfile
.cargo/: audit.toml
.github/workflows/: ci.yml
architecture_diagrams/: .latexmkrc  Makefile  README.md  architecture.tex
benchmark/: benchmark_dual_llm.rs  benchmark_local.rs  benchmark_verifier.rs  comprehensive_benchmark.rs  scenarios.json
docs/: AGENT_SKILLS.md  SECURITY_ARCHITECTURE.md
examples/: benchmark_dual_llm.rs  benchmark_local.rs  comprehensive_benchmark.rs  mcp_test_client.rs  mcp_test_server.rs
paper/: Makefile
paper/comprehensive_framework/: benchmark.py  benchmark_results_chromeos_i5-7300U.txt  benchmark_results_core-i7-7700.txt  benchmark_results_ryzen_5_8540u_wsl2.txt  benchmark_results_wsl2_ryzen_5_8450U.txt  detailed_architecture.tex  paper.tex  unified_architecture.tex
src/: consts.rs  lib.rs  main.rs  ui.rs
src/apps/: benchmark.rs  defaults.toml  identity_tool.rs  mcp_server.rs  mod.rs  model_listing.rs  pqc_decrypt.rs
src/cli/: markdown.rs  mod.rs  pager.rs  stats.rs  syntax_highlight.rs  ui.rs
src/cli/commands/: benchmark.rs  chat.rs  credits.rs  identity.rs  mcp_server.rs  mod.rs  models.rs  pqc_decrypt.rs  rankings.rs  skill_verify.rs
src/cli/interactive/: commands.rs  completion.rs  content_handler.rs  dispatcher.rs  mod.rs  model_handler.rs  session_handler.rs  tool_handler.rs  verify_handler.rs
src/cli/ui/: display.rs  mod.rs  prompt.rs  report.rs
src/clients/: base.rs  claude.rs  command_dispatcher.rs  config.rs  config_models.rs  gemini.rs  mcp_manager.rs  mod.rs  ollama.rs  openai.rs  registry.rs  session.rs  tool_executor_types.rs  tool_executor_utils.rs
src/config/: cache.rs  defaults.rs  defaults.toml  init.rs  mod.rs  models.rs  state.rs
src/core/: context.rs  initializer.rs  mod.rs  session.rs
src/core/session/: input_handler.rs  mod.rs  phase1_static.rs  phase2_approval.rs  phase2_verification.rs  phase3_execution.rs  phase3_verifier.rs  phase4_execution.rs  processor.rs  tool_executor.rs
src/llm/: base.rs  mod.rs  models.rs  registry.rs
src/llm/providers/: anthropic.rs  deepinfra.rs  google.rs  message_builder.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs  payload_formatter.rs  response_parser.rs
src/modules/: media_utils.rs  mod.rs  models.rs  tool_registry.rs
src/modules/tools/: file_modification.rs  file_ops.rs  interpreter.rs  mod.rs  shell.rs  web.rs
src/security/: abac.rs  audit.rs  cass.rs  dual_llm_verifier.rs  identity.rs  integrity.rs  key_storage.rs  merkle.rs  merkle_anchor.rs  mod.rs  path_validator.rs  permissions.rs  policy.rs  pqc.rs  pqc_cose.rs  resource_manager.rs  runtime.rs  skill_verifier.rs  static_analyzer.rs  verification_cache.rs  verifier.rs
src/security/audit/: chain.rs  logger.rs  mod.rs  rotation.rs  types.rs
src/security/skill/: mod.rs  parser.rs  semantic.rs  signature.rs  types.rs  verifier.rs
src/tools/: executor_types.rs  executor_utils.rs  mod.rs  registry.rs
src/tools/builtin/: brave_search.rs  file_modification.rs  file_ops.rs  interpreter.rs  mod.rs  python.rs  shell.rs  topic.rs  web.rs
src/tools/mcp/: client.rs  manager.rs
src/utils/: chat_logger.rs  elapsed_timer.rs  http.rs  logging.rs  media.rs  mod.rs  python_highlighter.rs  session_store.rs  shell_highlighter.rs  spinner.rs
tests/: abac_extended_tests.rs  abac_tests.rs  audit_chain_integrity_tests.rs  audit_verification_tests.rs  benchmarks.rs  cass_tests.rs  config_tests.rs  core_logic_tests.rs  critical_integrity_tests.rs  dual_llm_tests.rs  integrity_tests.rs  llm_client_trait_tests.rs  llm_message_builder_tests.rs  llm_response_parser_tests.rs  merkle_anchor_integrity_tests.rs  permissions_integrity_tests.rs  pqc_edge_case_tests.rs  pqc_tests.rs  processor_tests.rs  security_identity_test.rs  security_integrity_tests.rs  security_tests.rs  tool_tests.rs  verifier_tests.rs  web_tests.rs
tests/common/: mod.rs
