[package]
name = "llm-secure-cli"
version = "0.5.0"
edition = "2024"
autobins = false
rust-version = "1.95.0"


[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"

[[bin]]
name = "llsc"
path = "src/main.rs"

[[bench]]
name = "benchmark_local"
path = "benchmark/benchmark_local.rs"
harness = false

[[bench]]
name = "benchmark_verifier"
path = "benchmark/benchmark_verifier.rs"
harness = false

[dependencies]
ureq = { version = "3", default-features = false, features = ["json", "gzip", "rustls"] }
clap = { version = "4.5", default-features = false, features = ["derive", "help", "usage", "error-context", "suggestions", "std"] }
ctrlc = { version = "3.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
toml = { version = "1.1", default-features = false, features = ["display", "parse", "serde"] }
dirs = { version = "6.0", default-features = false }
console = { version = "0.16", default-features = false, features = ["std"] }
textwrap = { version = "0.16", default-features = false, features = ["unicode-width"] }
pulldown-cmark = { version = "0.13", default-features = false }
comfy-table = { version = "7.1", default-features = false }
anyhow = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
tempfile = { version = "3.12", default-features = false }
base64 = { version = "0.22", default-features = false }
sha2 = { version = "0.10", default-features = false }
rustyline = { version = "18.0", default-features = false, features = ["custom-bindings", "with-file-history"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
fips203 = { version = "0.4", default-features = false, features = ["ml-kem-512", "ml-kem-768", "ml-kem-1024", "default-rng"] }
fips204 = { version = "0.4", default-features = false, features = ["ml-dsa-44", "ml-dsa-65", "ml-dsa-87", "default-rng"] }
uuid = { version = "1.10", default-features = false, features = ["v4"] }
hostname = { version = "0.4", default-features = false }
jiff = { version = "0.2", default-features = false, features = ["std"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng", "getrandom"] }
argon2 = { version = "0.5", default-features = false, features = ["std"] }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
rpassword = { version = "7.3", default-features = false }
